--- a/style.css
+++ b/style.css
@@ -45,3 +45,37 @@
       transform: rotate(360deg);
     }
   }
+
+  #spin-btn {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    height: 26%;
+    width: 26%;
+    border-radius: 50%;
+    cursor: pointer;
+    border: 0;
+    background: radial-gradient(#3bfded 50%, #0f1ea1 85%);
+    color: #041E42;
+    text-transform: uppercase;
+    font-size: 1.8em;
+    letter-spacing: 0.1em;
+    font-weight: 600;
+  }
+  #arrow-btn {
+    position: absolute;
+    width: 4em;
+    top: 45%;
+    right: -8%;
+  }
+  .try-again {
+    width: 100px;
+  }
+  #final-value {
+    font-size: 1.5em;
+    text-align: center;
+    margin-top: 1.5em;
+    color: #202020;
+    font-weight: 500;
+  }
