--- a/style.css
+++ b/style.css
@@ -79,3 +79,11 @@
     color: #202020;
     font-weight: 500;
   }
+  @media screen and (max-width: 768px) {
+    .wrapper {
+      font-size: 12px;
+    }
+    img {
+      right: -5%;
+    }
+  }
